Wrote functions to get data from SLURM to show on the admin dashboard.

--- a/zooadapter/templates/admin/zoo_dashboard.html
+++ b/zooadapter/templates/admin/zoo_dashboard.html
@@ -2,5 +2,13 @@
 
 {% block content %}
 
+{{ server_info }}
+<br />
+<br />
+{{ job_info }}
+<br />
+<br />
+{{ node_info }}
+
 My view page template stuff.
 {% endblock %}
