Fixing pagination styling, changing datafiles page to show file name, not full url, fixing computations creation template

--- a/climateanalyser/templates/create_computation.html
+++ b/climateanalyser/templates/create_computation.html
@@ -27,8 +27,10 @@
       {% endif %}
       </div>
    {% endfor %}
-   <button id="add_datafile" class="button">Add Datafile</button>
-   <input type="submit" value="Submit" class="button" />
+   <div class="form_buttons">
+      <button id="add_datafile" class="button">Add Datafile</button>
+      <input type="submit" value="Submit" class="button" />
+   </div>
 </form>
 
 {% endblock %}
