--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,9 +85,9 @@ td {
 
 #header .menu li .button{
    padding:10px 10px;
-   width:110px;
+   width:95px;
    height:20px;
-   font-size:16px;
+   font-size:14px;
    line-height:20px;
 }
 
@@ -323,6 +323,7 @@ td {
    margin-bottom:20px;
 }
 
+#main .result_file,
 #main .data_files {
    float:right;
    width:100%;
@@ -330,6 +331,11 @@ td {
    margin-top:20px;
    padding:20px;
    box-sizing:border-box;
+}
+
+#main .result_file h2,
+#main .data_files h2 {
+   margin-top:0;
 }
 
 #main .data_files table {
