Adding in validation to user register form

--- a/climateanalyser/templates/computation.html
+++ b/climateanalyser/templates/computation.html
@@ -37,17 +37,14 @@
       <span class="key"><strong>Completed date</strong></span>
       <span class="value">{{ computation.completed_date }}</span>
    </div>
-   <div class="item result">
-      <span class="key"><strong>Result</strong></span>
-      <span class="value"><a href="{{ computation.result_nc }}">Download as NC File</a></span>
-   </div>
 </div>
 
 <div class="clearfix"></div>
 <div id="map">
 </div>
+
 <div class="data_files">
-   <h2>Data Files</h2>
+   <h2>Input Files</h2>
    <table>
       <thead>
          <tr>
@@ -66,6 +63,13 @@
       {% endfor %}
       </tbody>
    </table>
+</div>
+
+<div class="result_file">
+   <h2>Result File</h2>
+   <div class="item result">
+      <span class="value"><a href="{{ computation.result_nc }}">Download as NC File</a></span>
+   </div>
 </div>
 {% endblock %}
 
