Adding in home banner and text, fixing setting.py issues with login redirect

--- a/climateanalyser/templates/index.html
+++ b/climateanalyser/templates/index.html
@@ -1,15 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="home-banner">
-
+<h1>Welcome to Climate Analyser!</h1><p>An easy to use web tool which allows you to perform analysis on your CF formatted NetCDF data, anywhere in the world.</p>
 </div>
-
-<div class="home-module left">
-</div>
-
-<div class="home-module right">
-</div>
-
 {% endblock %}
 
 
