--- a/static/css/main.css
+++ b/static/css/main.css
@@ -165,6 +165,7 @@ td {
  * ############################################################# */
 #main .home-banner {
    background:url(../images/home-banner.jpg);
+   background-position: 0% 70%;
    height:315px;
    margin-bottom:20px;
    padding:80px 40px;
@@ -410,4 +411,18 @@ td {
    background: #f0eeeb;
    float:left;
    margin-top:20px;
+}
+/* #############################################################
+ * REGISTRATION PAGE
+ * ############################################################# */
+#main .register-wrapper {
+   background: #f0eeeb;
+   padding:40px; 
+width:40%;
+}
+#main .register-wrapper h1 {
+   margin-top:0
+}
+#main .register-wrapper ul {
+   margin-left:15px;
 }
